# TWIRL

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  detectability.py  detrend_wrapper.py  ideas.md  plan.md  plot_wd_1856.py  pyproject.toml  requirements.txt  sample.py
Vanderburg_TOI/: proposal_targets.txt  tic.py  tic_to_gaia_dr3.py  unique_TIC.py
configs/: a2v1_production_s58_s63.txt  a2v1_production_s64_s69.txt
data_local/: README.md
doc/: a2v1_production_protocol.md  ideas.md  local_data.md  mit_tglc_usage_guide.md  orcd_h200_usage.md  plotting_style.md  qlp_standard_transition_plan.md  science_background.md  sector_production_protocol.md  twirl_fs_methods.md  twirl_plan.md  twirl_progress_log.md  wd_background_review.html
docs/: mit_tglc_usage_guide.md  twirl_pipeline_plan.md
reports/: README.md
scripts/: README.md  activate_qlp_env.sh  assert_clean_checkout.sh  build_repository_audit_report.py  check_docs.py  detrend_wrapper.py  hlsp_wrapper.py  run_hlsp_s56.sh  sync_qc_pdfs.sh
tests/: test_a2v1_cadence_reference.py  test_a2v1_independent_extraction.py  test_a2v1_orchestration_scripts.py  test_a2v1_pixel_mask_maps.py  test_a2v1_qa.py  test_a2v1_teacher_recovery.py  test_a2v1_tier1_qa.py  test_adjudication.py  test_adp_only.py  test_allhost_injection_progress.py  test_bls_cadence_cleaning.py  test_bls_peak_walk.py  test_build_s56_adp_real_bls_peaks.py  test_build_source_tic_overlays.py  test_check_docs.py  test_compare_injection_bls_branches.py  test_detection_sample.py  test_eb_miner.py  test_external_quality.py  (+52 more)
(+1321 files in other folders)
